--- a/index.html
+++ b/index.html
@@ -27,11 +27,41 @@
         <br>
         <details>
             <summary>
+                Amplificación
+            </summary>
+            <article> 
+                <p>Proceso de aumento de la intensidad de la señal lumínica para contrarrestar la atenuación.</p>
+                <img src="imagenes1\amplificación.png">
+            </article>
+        </details>     
+        <br><br>
+        <details>
+            <summary>
                 Arquitectura de red
             </summary>
             <article> 
                 <p>Esta arquitectura o sistema está compuesto por un conjunto de equipos de transmisión, programas, protocolos de comunicación y una infraestructura radioeléctrica que posibilita la conexión y transmisión de datos a través de la red, de esta forma se logra compartir información de manera fiable y eficiente.</p>
                 <img src="imagenes1\arquitecturadered.jpg">
+            </article>
+        </details>     
+        <br><br>
+        <details>
+            <summary>
+                Atenuación
+            </summary>
+            <article> 
+                <p>Pérdida de intensidad de la señal lumínica a lo largo de la fibra óptica debido a la absorción y dispersión.</p>
+                <img src="imagenes1/atenuación.jpg">
+            </article>
+        </details>     
+        <br><br>
+        <details>
+            <summary>
+                Cable de fibra óptica
+            </summary>
+            <article> 
+                <p>Cable compuesto por filamentos de vidrio o plástico que transmiten señales de luz.</p>
+                <img src="imagenes1\revestimiento.jpg">
             </article>
         </details>     
         <br><br>
@@ -47,10 +77,28 @@
         <br><br>
         <details>
             <summary>
+                Conector óptico
+                <p>Dispositivo utilizado para unir cables de fibra óptica.</p>
+                <img src="imagenes1\conector.png">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
                 DHCP
             </summary>
             <article>
                 <p>El servidor DHCP almacena la información de configuración en una base de datos que incluye lo siguiente: Parámetros de configuración de TCP/IP válidos para todos los clientes de la red. Direcciones IP válidas, mantenidas en un grupo para la asignación a clientes, así como direcciones excluidas.</p>
+                <img src="imagenes1\DHCP.png">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Dirección MAC
+            </summary>
+            <article>
+                <p>Identificador único asignado a cada tarjeta de red para distinguirla en una red Ethernet.</p>
                 <img src="imagenes1\DHCP.png">
             </article>
         </details>
@@ -91,6 +139,26 @@
             </summary>
             <article>
                 <p>El espectro radioeléctrico es la parte del espectro electromagnético con frecuencias de 30GHz a 300 GHz. Las ondas electromagnéticas en este rango de frecuencia, llamadas ondas de radio, son ampliamente utilizadas en la tecnología moderna, particularmente en las telecomunicaciones.</p>
+                <img src="imagenes1\Espectro radial.png">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Fibra monomodo
+            </summary>
+            <article>
+                <p>Tipo de fibra óptica que permite la transmisión de un solo modo de luz, utilizada en largas distancias.</p>
+                <img src="imagenes1\Espectro radial.png">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Fibra multimodo
+            </summary>
+            <article>
+                <p>Tipo de fibra óptica que permite la transmisión de múltiples modos de luz, adecuada para distancias cortas.</p>
                 <img src="imagenes1\Espectro radial.png">
             </article>
         </details>
@@ -156,6 +224,16 @@
             </article>
         </details>
         <br><br>
+        <details>
+            <summary>
+                Núcleo 
+            </summary>
+            <article>
+                <img src="imagenes1\revestimiento.jpg">
+                <p>Parte central del cable de fibra óptica por donde viaja la luz.</p>
+            </article>
+        </details>
+        <br><br>
          <details>
             <summary>
                 Puertas de enlace
@@ -173,6 +251,56 @@
             <article>
                 <p>La red de ordenadores CYCLADES era una red de investigación francesa creada en los primeros años de los 70s. Fue una de las redes pioneras que experimentó con el concepto de conmutación de paquetes y fue desarrollada para explorar alternativas al diseño ARPANET. Sostenía la red local de investigación general</p>
                 <img src="imagenes1\cyclades.jpg">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Reflexión interna total
+            </summary>
+            <article>
+                <p>Fenómeno por el cual la luz se mantiene dentro del núcleo de la fibra debido a su ángulo de incidencia.</p>
+                <img src="imagenes1\cyclades.jpg">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Revestimiento
+            </summary>
+            <article>
+                <p>Capa que rodea al núcleo y permite que la luz se refleje dentro de la fibra.</p>
+                <img src="imagenes1\revestimiento.jpg">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Router
+            </summary>
+            <article>
+                <p>Dispositivo de red que dirige el tráfico de datos entre redes informáticas y permite la comunicación entre ellas.</p>
+                <img src="imagenes1\router.jpg">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Switch
+            </summary>
+            <article>
+                <p> Dispositivo de red que conecta múltiples dispositivos Ethernet y dirige el tráfico de red basado en direcciones MAC.</p>
+                <img src="imagenes1\switch.jpg">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Tarjeta de red
+            </summary>
+            <article>
+                <p> Dispositivo de hardware que permite que una computadora se conecte a una red Ethernet.</p>
+                <img src="imagenes1\tarjeta_de_red.jpg">
             </article>
         </details>
         <br><br>
@@ -213,6 +341,26 @@
             <article>
                 <p>Rama de las matemáticas que trata especialmente de la continuidad y de otros conceptos más generales originados de ella, como las propiedades de las figuras con independencia de su tamaño o forma.</p>
                 <img src="imagenes1\Topologia.png">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                VLAN
+            </summary>
+            <article>
+                <p>Red lógica que agrupa dispositivos de manera lógica independientemente de su ubicación física en la red.</p>
+                <img src="imagenes1/VLAN.png">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Wi-Fi
+            </summary>
+            <article>
+                <p>Tecnología que permite la conexión a una red Ethernet de forma inalámbrica.</p>
+                <img src="imagenes1\wifi.jpg">
             </article>
         </details>
         <br><br>
