--- a/index.html
+++ b/index.html
@@ -37,11 +37,31 @@
         <br><br>
         <details>
             <summary>
+                Ancho de banda
+            </summary>
+            <article> 
+                <p>Capacidad máxima de datos que una red Ethernet puede transmitir en un período de tiempo dado.</p>
+                <img src="imagenes1/ancho de banda.jpg">
+            </article>
+        </details>     
+        <br><br>
+        <details>
+            <summary>
                 Arquitectura de red
             </summary>
             <article> 
                 <p>Esta arquitectura o sistema está compuesto por un conjunto de equipos de transmisión, programas, protocolos de comunicación y una infraestructura radioeléctrica que posibilita la conexión y transmisión de datos a través de la red, de esta forma se logra compartir información de manera fiable y eficiente.</p>
                 <img src="imagenes1\arquitecturadered.jpg">
+            </article>
+        </details>     
+        <br><br>
+        <details>
+            <summary>
+                ARP
+            </summary>
+            <article> 
+                <p>Protocolo utilizado para mapear direcciones IP a direcciones MAC en una red Ethernet.</p>
+                <img src="imagenes1/ARP.png">
             </article>
         </details>     
         <br><br>
@@ -57,11 +77,31 @@
         <br><br>
         <details>
             <summary>
+                Broadcasting
+            </summary>
+            <article> 
+                <p>Método de comunicación en una red donde un mensaje se envía a todos los dispositivos de la red.</p>
+                <img src="imagenes1/Broadcast.png">
+            </article>
+        </details>     
+        <br><br>
+        <details>
+            <summary>
                 Cable de fibra óptica
             </summary>
             <article> 
                 <p>Cable compuesto por filamentos de vidrio o plástico que transmiten señales de luz.</p>
                 <img src="imagenes1\revestimiento.jpg">
+            </article>
+        </details>     
+        <br><br>
+        <details>
+            <summary>
+                Cable de par trenzado
+            </summary>
+            <article> 
+                <p> Tipo de cableado comúnmente utilizado en redes Ethernet que consta de pares de cables entrelazados para reducir la interferencia electromagnética.</p>
+                <img src="imagenes1/cable par trenzado.jpg">
             </article>
         </details>     
         <br><br>
@@ -78,8 +118,27 @@
         <details>
             <summary>
                 Conector óptico
+                <article>
                 <p>Dispositivo utilizado para unir cables de fibra óptica.</p>
                 <img src="imagenes1\conector.png">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Conectores RJ45
+                <article>
+                <p>Son como los enchufes que conectan los cables de red a dispositivos como computadoras y routers, estos nos ayudaran a transmitir datos de manera confiable a través de cables Ethernet.</p>
+                <img src="imagenes1/conector rj45.jpg">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Crimpadora
+                <article>
+                <p>Es una herramienta que parece una especie de "pinza especial" que se usa para colocar los conectores en los extremos de los cables de red, como los cables Ethernet.</p>
+                <img src="imagenes1/crimpadora.jpg">
             </article>
         </details>
         <br><br>
@@ -99,7 +158,7 @@
             </summary>
             <article>
                 <p>Identificador único asignado a cada tarjeta de red para distinguirla en una red Ethernet.</p>
-                <img src="imagenes1\DHCP.png">
+                <img src="imagenes1/Mac.jpg">
             </article>
         </details>
         <br><br>
@@ -149,7 +208,7 @@
             </summary>
             <article>
                 <p>Tipo de fibra óptica que permite la transmisión de un solo modo de luz, utilizada en largas distancias.</p>
-                <img src="imagenes1\Espectro radial.png">
+                <img src="imagenes1/Multimodo.jpg">
             </article>
         </details>
         <br><br>
@@ -159,7 +218,17 @@
             </summary>
             <article>
                 <p>Tipo de fibra óptica que permite la transmisión de múltiples modos de luz, adecuada para distancias cortas.</p>
-                <img src="imagenes1\Espectro radial.png">
+                <img src="imagenes1/Multimodo.jpg">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Firewall
+            </summary>
+            <article>
+                <p>Dispositivo o software que controla el tráfico de red entre redes Ethernet para filtrar y bloquear paquetes no deseados.</p>
+                <img src="imagenes1/Firewall.png">
             </article>
         </details>
         <br><br>
@@ -168,9 +237,19 @@
                 FTP
             </summary>
             <article>
-                <p>FTP es el acrónimo de «Protocolo de Transferencia de Ficheros» (en inglés, File Transfer Protocol). FTP es un protocolo que se utiliza para transferir todo tipo de archivos entre equipos conectados a una red, por ejemplo Internet.
+                <p>FTP es el acrónimo de «Protocolo de Transferencia de Ficheros» (en inglés, File Transfer Protocol). FTP es un protocolo que se utiliza para transferir todo tipo de archivos entre equipos conectados a una red, por ejemplo Internet.</p>
                     <img src="imagenes1\FTP.jpg">
-                </p>
+                
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Gateway predeterminada
+            </summary>
+            <article>
+                <p>Dirección IP del enrutador utilizado por un dispositivo para enviar datos a redes externas.</p>
+                    <img src="imagenes1/gateway predeterminada.png">
             </article>
         </details>
         <br><br>
@@ -184,6 +263,27 @@
             </article>
         </details>
         <br><br>
+        <details>
+            <summary>
+                Ipconfig
+            </summary>
+            <article>
+                <p>
+                    El comando ipconfig es una herramienta de línea de comandos utilizada en sistemas operativos Windows para mostrar la configuración de red actual de un dispositivo.</p>
+                <img src="imagenes1/Ipconfig.png">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Latencia
+            </summary>
+            <article>
+                <p>Tiempo que tarda un paquete de datos en viajar de un punto a otro en una red Ethernet.</p>
+                <img src="imagenes1/latencia.jpg">
+            </article>
+        </details>
+        <br><br>
           <details>
             <summary>
                 Mainframe
@@ -191,6 +291,16 @@
             <article>
                 <img src="imagenes1\mainframe.jpg">
                 <p>Es un ordenador muy potente diseñado para el procesamiento de datos a alta velocidad con un uso intensivo de datos.</p>
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Máscara de subred
+            </summary>
+            <article>
+                <img src="imagenes1/Mascara de subred.png">
+                <p>Valor numérico utilizado para dividir una red Ethernet en subredes más pequeñas y determinar qué parte de una dirección IP corresponde a la red y qué parte corresponde al host.</p>
             </article>
         </details>
         <br><br>
@@ -234,6 +344,26 @@
             </article>
         </details>
         <br><br>
+        <details>
+            <summary>
+                Ping
+            </summary>
+            <article>
+                <p>El comando ping es una utilidad de red utilizada para verificar la conectividad entre dos dispositivos a través de Internet Protocol (IP)</p>
+                <img src="imagenes1/Ping.png">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Probador
+            </summary>
+            <article>
+                <p>Basicamente un probador de cables es una herramienta que se usa para asegurarse de que los cables de red.</p>
+                <img src="imagenes1/probador.jpg">
+            </article>
+        </details>
+        <br><br>
          <details>
             <summary>
                 Puertas de enlace
@@ -260,7 +390,7 @@
             </summary>
             <article>
                 <p>Fenómeno por el cual la luz se mantiene dentro del núcleo de la fibra debido a su ángulo de incidencia.</p>
-                <img src="imagenes1\cyclades.jpg">
+                <img src="imagenes1/reflexion interna total.jpg">
             </article>
         </details>
         <br><br>
@@ -344,6 +474,17 @@
             </article>
         </details>
         <br><br>
+        <details>
+            <summary>
+                Tráfico
+            </summary>
+            <article>
+                <p>Flujo de datos que se transmite a través de una red Ethernet.</p>
+                <img src="imagenes1/networking.jpg">
+            </article>
+        </details>
+        <br><br>
+
         <details>
             <summary>
                 VLAN
