--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
         <br>
         <details>
             <summary>
+                Alambrico
+            </summary>
+            <article> 
+                <p>"Alámbrico" se refiere a la conexión de dispositivos mediante cables físicos, como cables de Ethernet, cables telefónicos o cables coaxiales.</p>
+                <img src="imagenes1/Alambrico.jpg">
+            </article>
+        </details>     
+        <br><br>
+        <details>
+            <summary>
                 Amplificación
             </summary>
             <article> 
@@ -112,6 +122,36 @@
             <article>
                 <p>Es un dispositivo capaz de almacenar energía en forma de campo eléctrico. Está formado por dos armaduras metálicas paralelas (generalmente de aluminio) separadas por un material dieléctrico.</p>
                 <img src="imagenes1\Condensador.jpg">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Conector óptico
+                </summary>
+                <article>
+                <p>Dispositivo utilizado para unir cables de fibra óptica.</p>
+                <img src="imagenes1\conector.png">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Conectores RJ45
+                </summary>
+                <article>
+                <p>Son como los enchufes que conectan los cables de red a dispositivos como computadoras y routers, estos nos ayudaran a transmitir datos de manera confiable a través de cables Ethernet.</p>
+                <img src="imagenes1/conector rj45.jpg">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Crimpadora
+                </summary>
+                <article>
+                <p>Es una herramienta que parece una especie de "pinza especial" que se usa para colocar los conectores en los extremos de los cables de red, como los cables Ethernet.</p>
+                <img src="imagenes1/crimpadora.jpg">
             </article>
         </details>
         <br><br>
@@ -238,6 +278,26 @@
         <br><br>
         <details>
             <summary>
+                https
+            </summary>
+            <article>
+                <p>Versión segura del protocolo HTTP que utiliza cifrado SSL/TLS para proteger la información transmitida entre el navegador y el servidor web.</p>
+                <img src="imagenes1\Http.jpg">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Inalámbrico
+            </summary>
+            <article>
+                <p>"Inalámbrico" se refiere a la conexión de dispositivos sin la necesidad de cables físicos, utilizando tecnologías de comunicación inalámbrica como Wi-Fi, Bluetooth, infrarrojos o radiofrecuencia.</p>
+                <img src="imagenes1/inalambrico.png">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
                 Ipconfig
             </summary>
             <article>
@@ -249,11 +309,22 @@
         <br><br>
         <details>
             <summary>
-                Latencia
+                Ipconfig
             </summary>
             <article>
-                <p>Tiempo que tarda un paquete de datos en viajar de un punto a otro en una red Ethernet.</p>
-                <img src="imagenes1/latencia.jpg">
+                <p>
+                    El comando ipconfig es una herramienta de línea de comandos utilizada en sistemas operativos Windows para mostrar la configuración de red actual de un dispositivo.</p>
+                <img src="imagenes1/Ipconfig.png">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                IPv4
+            </summary>
+            <article>
+                <p>Versión más comúnmente utilizada del protocolo IP, que utiliza direcciones IP de 32 bits.</p>
+                <img src="imagenes1/Ip.png">
             </article>
         </details>
         <br><br>
@@ -319,6 +390,17 @@
         <br><br>
         <details>
             <summary>
+                PAN 
+            </summary>
+            <article>
+                <img src="imagenes1/PAN.jpg">
+                <p>
+                    Una red PAN, o Personal Area Network (Red de Área Personal), es una red de dispositivos conectados que está diseñada para cubrir un área muy pequeña, típicamente dentro del alcance físico de una persona</p>
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
                 Ping
             </summary>
             <article>
@@ -344,6 +426,16 @@
             <article>
                 <p>Es un sistema informático que se sitúa entre redes. Convierten los datos y la información que envía una red a un formato compatible con la receptora.</p>
                 <img src="imagenes1\Puerta de enlace.png">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Rayos gamma
+            </summary>
+            <article>
+                <p>En el contexto de las redes y las comunicaciones de datos, los rayos gamma no se utilizan directamente. Sin embargo, en la tecnología espacial, los rayos gamma pueden afectar los sistemas electrónicos de satélites y naves espaciales, por lo que se deben tener en cuenta al diseñar y proteger estos sistemas para evitar interferencias y daños.</p>
+                <img src="imagenes1/Rayos gamma.jpg">
             </article>
         </details>
         <br><br>
@@ -384,6 +476,36 @@
             <article>
                 <p>Dispositivo de red que dirige el tráfico de datos entre redes informáticas y permite la comunicación entre ellas.</p>
                 <img src="imagenes1\router.jpg">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Satélite
+            </summary>
+            <article>
+                <p>En el contexto de las redes y las comunicaciones de datos, los satélites se utilizan para transmitir señales de comunicación, como televisión, telefonía, internet y datos, desde el espacio hasta la Tierra.</p>
+                <img src="imagenes1/satelite.jpg">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Servidor
+            </summary>
+            <article>
+                <p>Computadora o dispositivo que proporciona servicios o recursos a otros dispositivos en una red, como almacenamiento de archivos, correo electrónico, páginas web, etc.</p>
+                <img src="imagenes1/servidor.jpg">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                SSL
+            </summary>
+            <article>
+                <p> Protocolo de seguridad que proporciona comunicaciones seguras a través de Internet mediante la encriptación de datos entre el cliente y el servidor.</p>
+                <img src="imagenes1/ssl.png">
             </article>
         </details>
         <br><br>
@@ -457,7 +579,6 @@
             </article>
         </details>
         <br><br>
-
         <details>
             <summary>
                 VLAN
@@ -465,6 +586,26 @@
             <article>
                 <p>Red lógica que agrupa dispositivos de manera lógica independientemente de su ubicación física en la red.</p>
                 <img src="imagenes1/VLAN.png">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                VPN
+            </summary>
+            <article>
+                <p>Red privada virtual que utiliza una red pública, como Internet, para conectar dispositivos de forma segura y privada a través de cifrado.</p>
+                <img src="imagenes1/vpn.jpg">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                WAN
+            </summary>
+            <article>
+                <p>Red de computadoras y dispositivos interconectados a través de una amplia área geográfica, como ciudades, países o continentes.</p>
+                <img src="imagenes1/wan.jpg">
             </article>
         </details>
         <br><br>
@@ -488,3 +629,4 @@
             </article>
         </details>
         <br><br>
+        
