--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </summary>
             <article> 
                 <p>Proceso de aumento de la intensidad de la señal lumínica para contrarrestar la atenuación.</p>
-                <img src="imagenes1\amplificación.png">
+                <img src="imagenes1/amplificación (2).png">
             </article>
         </details>     
         <br><br>
@@ -81,7 +81,7 @@
             </summary>
             <article> 
                 <p>Pérdida de intensidad de la señal lumínica a lo largo de la fibra óptica debido a la absorción y dispersión.</p>
-                <img src="imagenes1/atenuación.jpg">
+                <img src="imagenes1/atenuación (2).jpg">
             </article>
         </details>     
         <br><br>
@@ -91,7 +91,7 @@
             </summary>
             <article> 
                 <p>Método de comunicación en una red donde un mensaje se envía a todos los dispositivos de la red.</p>
-                <img src="imagenes1/Broadcast.png">
+                <img src="imagenes1/Bradcast.png">
             </article>
         </details>     
         <br><br>
@@ -111,7 +111,7 @@
             </summary>
             <article> 
                 <p> Tipo de cableado comúnmente utilizado en redes Ethernet que consta de pares de cables entrelazados para reducir la interferencia electromagnética.</p>
-                <img src="imagenes1/cable par trenzado.jpg">
+                <img src="imagenes1/cable par trenzado (2).jpg">
             </article>
         </details>     
         <br><br>
@@ -309,17 +309,6 @@
         <br><br>
         <details>
             <summary>
-                Ipconfig
-            </summary>
-            <article>
-                <p>
-                    El comando ipconfig es una herramienta de línea de comandos utilizada en sistemas operativos Windows para mostrar la configuración de red actual de un dispositivo.</p>
-                <img src="imagenes1/Ipconfig.png">
-            </article>
-        </details>
-        <br><br>
-        <details>
-            <summary>
                 IPv4
             </summary>
             <article>
@@ -465,7 +454,7 @@
             </summary>
             <article>
                 <p>Capa que rodea al núcleo y permite que la luz se refleje dentro de la fibra.</p>
-                <img src="imagenes1\revestimiento.jpg">
+                <img src="imagenes1/revestimiento (2).jpg">
             </article>
         </details>
         <br><br>
