--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </summary>
             <article> 
                 <p>Protocolo utilizado para mapear direcciones IP a direcciones MAC en una red Ethernet.</p>
-                <img src="imagenes1/ARP.png">
+                <img src="imagenes1/ARP (2).png">
             </article>
         </details>     
         <br><br>
