--- a/index.html
+++ b/index.html
@@ -97,6 +97,16 @@
         <br><br>
         <details>
             <summary>
+                Cable cruzado
+            </summary>
+            <article> 
+                <p>Tipo de cable Ethernet donde los pares de hilos de transmisión y recepción están cruzados, utilizado para conectar directamente dos dispositivos sin un conmutador.</p>
+                <img src="imagenes1/Cable cruazdo.jpg">
+            </article>
+        </details>     
+        <br><br>
+        <details>
+            <summary>
                 Cable de fibra óptica
             </summary>
             <article> 
@@ -112,6 +122,36 @@
             <article> 
                 <p> Tipo de cableado comúnmente utilizado en redes Ethernet que consta de pares de cables entrelazados para reducir la interferencia electromagnética.</p>
                 <img src="imagenes1/cable par trenzado (2).jpg">
+            </article>
+        </details>     
+        <br><br>
+        <details>
+            <summary>
+                Cable directo
+            </summary>
+            <article> 
+                <p> Cable Ethernet con los hilos conectados en el mismo orden en ambos extremos, utilizado para conectar dispositivos a un conmutador o router.</p>
+                <img src="imagenes1/Cable cruazdo.jpg">
+            </article>
+        </details>     
+        <br><br>
+        <details>
+            <summary>
+                Cable UTP
+            </summary>
+            <article> 
+                <p>Tipo de cable utilizado en redes de datos compuesto por pares de hilos trenzados sin apantallamiento, diseñado para minimizar interferencias electromagnéticas.</p>
+                <img src="imagenes1/CableUTP.jpg">
+            </article>
+        </details>     
+        <br><br>
+        <details>
+            <summary>
+                Categoria del cable
+            </summary>
+            <article> 
+                <p>Clasificación de cables UTP basada en su capacidad de transmisión y ancho de banda, como Cat5, Cat5e, Cat6, entre otros.</p>
+                <img src="imagenes1/Categoriacables.jpg">
             </article>
         </details>     
         <br><br>
@@ -212,6 +252,26 @@
             <article>
                 <p>El espectro radioeléctrico es la parte del espectro electromagnético con frecuencias de 30GHz a 300 GHz. Las ondas electromagnéticas en este rango de frecuencia, llamadas ondas de radio, son ampliamente utilizadas en la tecnología moderna, particularmente en las telecomunicaciones.</p>
                 <img src="imagenes1\Espectro radial.png">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Esquema clableado T568A
+            </summary>
+            <article>
+                <p>Estándar de cableado que define el orden de los colores de los hilos en un conector RJ45, utilizado principalmente en aplicaciones de telecomunicaciones residenciales.</p>
+                <img src="imagenes1/EsquemaUTP.jpg">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Esquema clableado T568B
+            </summary>
+            <article>
+                <p>Estándar de cableado alternativo al T568A, con una disposición de colores diferente, comúnmente utilizado en instalaciones de redes empresariales.</p>
+                <img src="imagenes1/EsquemaUTP.jpg">
             </article>
         </details>
         <br><br>
@@ -390,11 +450,81 @@
         <br><br>
         <details>
             <summary>
+                Par de recepción
+            </summary>
+            <article>
+                <img src="imagenes1/Cable cruazdo.jpg">
+                <p>Par de hilos dentro del cable UTP designado para la recepción de datos en la dirección opuesta en un cable Ethernet.</p>
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Par de transmisión
+            </summary>
+            <article>
+                <img src="imagenes1/Cable cruazdo.jpg">
+                <p> Par de hilos dentro del cable UTP designado para la transmisión de datos en una dirección en un cable Ethernet.</p>
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Paridad de color 
+            </summary>
+            <article>
+                <img src="imagenes1/Cable cruazdo.jpg">
+                <p> Sistema de codificación de colores utilizado en los estándares T568A y T568B para identificar fácilmente la correcta disposición de los hilos.</p>
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Pelacables 
+            </summary>
+            <article>
+                <img src="imagenes1/pelacable.jpg">
+                <p>Herramienta utilizada para retirar el revestimiento exterior del cable UTP sin dañar los hilos internos, facilitando la preparación para el ponchado.</p>
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Perdida de incersión 
+            </summary>
+            <article>
+                <img src="imagenes1/Cable cruazdo.jpg">
+                <p>Atenuación de la señal que ocurre cuando se conectan los hilos del cable UTP al conector RJ45, afectando la calidad de la transmisión de datos.</p>
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Pinout
+            </summary>
+            <article>
+                <p>Diagrama que muestra la asignación de los pines de un conector RJ45 a los hilos del cable UTP, esencial para el correcto ponchado según el estándar elegido.</p>
+                <img src="imagenes1/Ping.png">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
                 Ping
             </summary>
             <article>
                 <p>El comando ping es una utilidad de red utilizada para verificar la conectividad entre dos dispositivos a través de Internet Protocol (IP)</p>
                 <img src="imagenes1/Ping.png">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Ponchadora de impacto
+            </summary>
+            <article>
+                <p>Utilizada para insertar los hilos del cable UTP en los conectores de tipo punch-down, común en paneles de parcheo y bloques de terminación.</p>
+                <img src="imagenes1/Ponchadoradeimpacto.jpg">
             </article>
         </details>
         <br><br>
@@ -525,6 +655,16 @@
             <article>
                 <p>El telégrafo fue la primera tecnología que literalmente permitió la transmisión de datos, y el telégrafo eléctrico hizo uso de la señal eléctrica por primera vez con el mismo propósito. Hoy día puede parecer extraño, pero la habilidad de acelerar radicalmente la transmisión de datos no fue apreciada inmediatamente.</p>
                 <img src="imagenes1\Telegrafo.jpg">
+            </article>
+        </details>
+        <br><br>
+        <details>
+            <summary>
+                Tester de cables
+            </summary>
+            <article>
+                <p>Dispositivo utilizado para verificar la continuidad, la correcta conexión y la funcionalidad de los cables de red, asegurando que no haya errores en el ponchado.</p>
+                <img src="imagenes1/Tester,jpg.jpg">
             </article>
         </details>
         <br><br>
